fix: checkbox label not centered

--- a/apps/concept-catalog/components/search-filter/checkbox-tree-filter/checkbox-tree.module.css
+++ b/apps/concept-catalog/components/search-filter/checkbox-tree-filter/checkbox-tree.module.css
@@ -15,3 +15,7 @@
   width: 32px;
   height: 32px;
 }
+
+.pt1 {
+  padding-top: 1rem;
+}
